# simulator_for_IL_RL

./: .gitignore  README.md  env.py  env_test.py  joint_space_example.py  joystick_example.py  pyproject.toml  show_names.py  state_classifier_example.py  task_space_example.py
robot/: scene.xml  ur10e2f85.xml  ur10edg5f.xml
scripts/: joint_space_example.py  read_parquet.py  record_traj.py  state_classifier_example.py  task_space_example.py
simulator_for_il_rl/: env.py
simulator_for_il_rl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
simulator_for_il_rl/helpers/: show_names.py
simulator_for_il_rl/robot/: hande.xml  scene.xml  ur10e2f85.xml  ur10egripper.xml
simulator_for_il_rl/robot/assets/box/: cap.stl  mid.stl
